# FileIndexer

./: .clang-format  .gitignore  CMakeLists.txt  FileIndex.cpp  FileIndexTests.cpp  FileScanner.cpp  FileScannerTests.cpp  FileSearch.cpp  FileSearchTests.cpp  main.cpp
.github/workflows/: ci.yml
include/: FileIndex.h  FileScanner.h  FileSearch.h
